--- a/web/css/robert.css
+++ b/web/css/robert.css
@@ -930,7 +930,7 @@ background-color:transparent;
 margin-top: 5em;
 }
 
-.einzelstunden .accordion-yellow p, .einzelstunden .panel-heading:hover p  {
+.einzelstunden .accordion-yellow p {
 color:#000;
 }
 
